--- a/includes/nav/nav.html
+++ b/includes/nav/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark primary-color">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="read.php">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,13 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="../../index.php">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../../read.php">Read</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../../create.php">Create data</a>
+        <a class="nav-link" href="create.php">Create <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
