--- a/includes/register-form/index.html
+++ b/includes/register-form/index.html
@@ -1,30 +1,32 @@
-<?php
+<!DOCTYPE html>
+<html lang="en">
 
-session_start();
+<head>
+    <!-- Required meta tags-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Colorlib Templates">
+    <meta name="author" content="Colorlib">
+    <meta name="keywords" content="Colorlib Templates">
 
-$title = 'Register';
-include "includes/header.php";
-?>
-    <form action="" method="post">
-        <input type="text" id="first_name" class="fadeIn second" name="first_name" placeholder="first name">
-        <input type="text" id="last_name" class="fadeIn third" name="last_name" placeholder="last name">
-        <input type="text" id="username" class="fadeIn second" name="username" placeholder="username">
-        <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
+    <!-- Title Page-->
+    <title>Au Register Forms by Colorlib</title>
 
-        <button type="submit" class="btn" name="reg_user">Register</button>
-    </form>
+    <!-- Icons font CSS-->
+    <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
+    <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
+    <!-- Font special for pages-->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
+    <!-- Vendor CSS-->
+    <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
+    <link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
 
-    <div id="formFooter">
-        <a class="underlineHover" href="index.php">Sign in</a>
-    </div>
-    <div id="formFooter">
-        <a class="underlineHover" href="index.php" onclick="<?php session_destroy(); ?>">Back</a>
-    </div>
+    <!-- Main CSS-->
+    <link href="css/main.css" rel="stylesheet" media="all">
+</head>
 
-
-
-////////////////////////////////////////////////////////////////////////////////
+<body>
     <div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
         <div class="wrapper wrapper--w680">
             <div class="card card-4">
@@ -106,47 +108,17 @@ include "includes/header.php";
         </div>
     </div>
 
-    <script src="includes/register-form/vendor/jquery/jquery.min.js"></script>
+    <!-- Jquery JS-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- Vendor JS-->
+    <script src="vendor/select2/select2.min.js"></script>
+    <script src="vendor/datepicker/moment.min.js"></script>
+    <script src="vendor/datepicker/daterangepicker.js"></script>
 
-    <script src="includes/register-form/vendor/select2/select2.min.js"></script>
-    <script src="includes/register-form/vendor/datepicker/moment.min.js"></script>
-    <script src="includes/register-form/vendor/datepicker/daterangepicker.js"></script>
-
-
+    <!-- Main JS-->
     <script src="js/global.js"></script>
 
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
-<?php
-// initializing variables
-// $username = "";
-
-// $errors = array(); 
-
-// connect to the database
-$db = mysqli_connect('localhost', 'root', '', 'project_02');
-
-// REGISTER USER
-if (isset($_POST['reg_user'])) {
-    // receive all input values from the form
-    $username = mysqli_real_escape_string($db, $_POST['username']);
-
-    $password = mysqli_real_escape_string($db, $_POST['password']);
-
-    $first_name = mysqli_real_escape_string($db, $_POST['first_name']);
-
-    $last_name = mysqli_real_escape_string($db, $_POST['last_name']);
-
-    $user_check_query = "SELECT * FROM user WHERE username='" . $username . "'";
-    $result = mysqli_query($db, $user_check_query);
-    
-    if(mysqli_num_rows($result) > 0){
-        echo "taken";
-    }else{
-        $query = "INSERT INTO user (username, password, first_name, last_name) VALUES ('$username', '$password', '$first_name', '$last_name')";
-        mysqli_query($db, $query);
-        $_SESSION['username'] = $username;
-        header('location: read.php');
-    }
-}
-
-include "includes/footer.php";
+</html>
+<!-- end document-->
