--- a/includes/nav/nav.html
+++ b/includes/nav/nav.html
@@ -7,7 +7,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-
+            <a class="navbar-brand" href="search.php">Search</a>
         </ul>
     </div>
 </nav>
