--- a/includes/nav/nav.html
+++ b/includes/nav/nav.html
@@ -1,13 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark primary-color">
-    <a class="navbar-brand" href="read.php">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand btn btn-warning " href="read.php">Home</a>
+
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <a class="navbar-brand" href="search.php">Search</a>
+            <a class="navbar-brand btn btn-warning " href="search.php">Search</a>
         </ul>
     </div>
 </nav>
